compiler/grammar.output
Grammar

    0 $accept: file $end

    1 file: classDefinition

    2 classDefinition: CLASS IDENTIFIER '{' classBodyItemList '}'

    3 classBodyItemList: classBodyItemList classBodyItem
    4                  | /* empty */

    5 classBodyItem: fieldDeclaration
    6              | methodDefinition

    7 fieldDeclaration: varDeclaration

    8 varDeclaration: type varDeclarationList ';'

    9 varDeclarationList: varDeclarationList ',' varDeclarationItem
   10                   | varDeclarationItem

   11 varDeclarationItem: IDENTIFIER
   12                   | IDENTIFIER '=' expression

   13 type: IDENTIFIER
   14     | type OPEN_AND_CLOSE_BRACKET

   15 methodDefinition: type IDENTIFIER '(' argList ')' methodBody
   16                 | VOID IDENTIFIER '(' argList ')' methodBody
   17                 | type IDENTIFIER '(' ')' methodBody
   18                 | VOID IDENTIFIER '(' ')' methodBody

   19 argList: argList ',' argItem
   20        | argItem

   21 argItem: type IDENTIFIER
   22        | type IDENTIFIER '=' expression

   23 methodBody: '{' statementList '}'

   24 statementList: statementList statement
   25              | /* empty */

   26 statement: ';'
   27          | varDeclaration
   28          | directAssignmentExpression ';'
   29          | directIncrementExpression ';'
   30          | methodCall ';'
   31          | ifStatement
   32          | switchStatement
   33          | whileStatement
   34          | doWhileStatement
   35          | forStatement
   36          | forInStatement
   37          | controlFlowStatement
   38          | '{' statementList '}'

   39 assignmentOperator: '='
   40                   | PLUS_ASSIGN
   41                   | MINUS_ASSIGN
   42                   | MULT_ASSIGN
   43                   | DIV_ASSIGN
   44                   | MOD_ASSIGN
   45                   | LEFT_SHIFT_ASSIGN
   46                   | RIGHT_SHIFT_ASSIGN
   47                   | UNSIGNED_RIGHT_SHIFT_ASSIGN
   48                   | AND_ASSIGN
   49                   | OR_ASSIGN
   50                   | XOR_ASSIGN

   51 directIncrementExpression: parenthesesExpression INCREMENT
   52                          | parenthesesExpression DECREMENT
   53                          | INCREMENT parenthesesExpression
   54                          | DECREMENT parenthesesExpression

   55 ifStatement: IF '(' expression ')' statement
   56            | IF '(' expression ')' statement ELSE statement

   57 switchStatement: SWITCH '(' expression ')' '{' caseList '}'

   58 caseList: caseList caseClause ':' statementList
   59         | /* empty */

   60 caseClause: CASE literal
   61           | DEFAULT

   62 literal: INT_LITERAL
   63        | TRUE
   64        | FALSE

   65 whileStatement: WHILE '(' expression ')' statement

   66 doWhileStatement: DO statement WHILE '(' expression ')' ';'

   67 forStatement: FOR '(' forStatementList ';' expression ';' forStatementList ')' statement

   68 forStatementList: forNonEmptyStatementList
   69                 | /* empty */

   70 forNonEmptyStatementList: forComponentStatement ',' forNonEmptyStatementList
   71                         | forComponentStatement

   72 forComponentStatement: directAssignmentExpression
   73                      | directIncrementExpression
   74                      | methodCall
   75                      | type IDENTIFIER '=' expression

   76 forInStatement: FOR '(' type IDENTIFIER ':' expression ')' statement

   77 controlFlowStatement: BREAK ';'
   78                     | BREAK INT_LITERAL ';'
   79                     | CONTINUE ';'
   80                     | CONTINUE INT_LITERAL ';'
   81                     | RETURN ';'
   82                     | RETURN expression ';'

   83 methodCall: IDENTIFIER '(' expressionList ')'
   84           | IDENTIFIER '(' ')'

   85 expressionList: expressionList ',' expression
   86               | expression

   87 bracketExpressionList: bracketExpressionList '[' expression ']'
   88                      | '[' expression ']'

   89 expression: assignmentExpression

   90 directAssignmentExpression: parenthesesExpression assignmentOperator assignmentExpression

   91 assignmentExpression: directAssignmentExpression
   92                     | booleanOrExpression

   93 booleanOrExpression: booleanOrExpression BOOLEAN_OR booleanAndExpression
   94                    | booleanAndExpression

   95 booleanAndExpression: booleanAndExpression BOOLEAN_AND bitwiseOrExpression
   96                     | equalityExpression

   97 equalityExpression: equalityExpression EQUALS bitwiseOrExpression
   98                   | equalityExpression NOT_EQUALS bitwiseOrExpression
   99                   | bitwiseOrExpression

  100 bitwiseOrExpression: bitwiseOrExpression '|' xorExpression
  101                    | xorExpression

  102 xorExpression: xorExpression '^' bitwiseAndExpression
  103              | bitwiseAndExpression

  104 bitwiseAndExpression: bitwiseAndExpression '&' comparisonExpression
  105                     | comparisonExpression

  106 comparisonExpression: comparisonExpression '<' bitShiftExpression
  107                     | comparisonExpression '>' bitShiftExpression
  108                     | comparisonExpression LESS_THAN_OR_EQUAL_TO bitShiftExpression
  109                     | comparisonExpression GREATER_THAN_OR_EQUAL_TO bitShiftExpression
  110                     | bitShiftExpression

  111 bitShiftExpression: bitShiftExpression LEFT_SHIFT additionExpression
  112                   | bitShiftExpression RIGHT_SHIFT additionExpression
  113                   | bitShiftExpression UNSIGNED_RIGHT_SHIFT additionExpression
  114                   | additionExpression

  115 additionExpression: additionExpression '+' multiplicationExpression
  116                   | additionExpression '-' multiplicationExpression
  117                   | multiplicationExpression

  118 multiplicationExpression: multiplicationExpression '*' castExpression
  119                         | multiplicationExpression '/' castExpression
  120                         | multiplicationExpression '%' castExpression
  121                         | castExpression

  122 castExpression: '(' expression ')' castFriendlyUnaryExpression
  123               | castUnfriendlyUnaryExpression

  124 castUnfriendlyUnaryExpression: directIncrementExpression
  125                              | '-' castUnfriendlyUnaryExpression
  126                              | '[' expressionList ']'
  127                              | OPEN_AND_CLOSE_BRACKET
  128                              | castFriendlyUnaryExpression

  129 castFriendlyUnaryExpression: '~' castUnfriendlyUnaryExpression
  130                            | '!' castUnfriendlyUnaryExpression
  131                            | NEW IDENTIFIER bracketExpressionList
  132                            | parenthesesExpression

  133 parenthesesExpression: '(' expression ')'
  134                      | parenthesesExpression '[' expression ']'
  135                      | parenthesesExpression '.' LENGTH
  136                      | methodCall
  137                      | literal
  138                      | IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 130
'%' (37) 120
'&' (38) 104
'(' (40) 15 16 17 18 55 56 57 65 66 67 76 83 84 122 133
')' (41) 15 16 17 18 55 56 57 65 66 67 76 83 84 122 133
'*' (42) 118
'+' (43) 115
',' (44) 9 19 70 85
'-' (45) 116 125
'.' (46) 135
'/' (47) 119
':' (58) 58 76
';' (59) 8 26 28 29 30 66 67 77 78 79 80 81 82
'<' (60) 106
'=' (61) 12 22 39 75
'>' (62) 107
'[' (91) 87 88 126 134
']' (93) 87 88 126 134
'^' (94) 102
'{' (123) 2 23 38 57
'|' (124) 100
'}' (125) 2 23 38 57
'~' (126) 129
error (256)
BREAK (258) 77 78
CASE (259) 60
CLASS (260) 2
CONTINUE (261) 79 80
DEFAULT (262) 61
DO (263) 66
ELSE (264) 56
FALSE (265) 64
FOR (266) 67 76
IF (267) 55 56
LENGTH (268) 135
NEW (269) 131
RETURN (270) 81 82
SWITCH (271) 57
TRUE (272) 63
VOID (273) 16 18
WHILE (274) 65 66
BOOLEAN_AND (275) 95
BOOLEAN_OR (276) 93
EQUALS (277) 97
NOT_EQUALS (278) 98
LESS_THAN_OR_EQUAL_TO (279) 108
GREATER_THAN_OR_EQUAL_TO (280) 109
LEFT_SHIFT (281) 111
RIGHT_SHIFT (282) 112
UNSIGNED_RIGHT_SHIFT (283) 113
DECREMENT (284) 52 54
INCREMENT (285) 51 53
OPEN_AND_CLOSE_BRACKET (286) 14 127
AND_ASSIGN (287) 48
DIV_ASSIGN (288) 43
LEFT_SHIFT_ASSIGN (289) 45
MINUS_ASSIGN (290) 41
MOD_ASSIGN (291) 44
MULT_ASSIGN (292) 42
OR_ASSIGN (293) 49
PLUS_ASSIGN (294) 40
RIGHT_SHIFT_ASSIGN (295) 46
UNSIGNED_RIGHT_SHIFT_ASSIGN (296) 47
XOR_ASSIGN (297) 50
IDENTIFIER (298) 2 11 12 13 15 16 17 18 21 22 75 76 83 84 131 138
INT_LITERAL (299) 62 78 80
IFX (300)


Nonterminals, with rules where they appear

$accept (69)
    on left: 0
file (70)
    on left: 1, on right: 0
classDefinition (71)
    on left: 2, on right: 1
classBodyItemList (72)
    on left: 3 4, on right: 2 3
classBodyItem (73)
    on left: 5 6, on right: 3
fieldDeclaration (74)
    on left: 7, on right: 5
varDeclaration (75)
    on left: 8, on right: 7 27
varDeclarationList (76)
    on left: 9 10, on right: 8 9
varDeclarationItem (77)
    on left: 11 12, on right: 9 10
type (78)
    on left: 13 14, on right: 8 14 15 17 21 22 75 76
methodDefinition (79)
    on left: 15 16 17 18, on right: 6
argList (80)
    on left: 19 20, on right: 15 16 19
argItem (81)
    on left: 21 22, on right: 19 20
methodBody (82)
    on left: 23, on right: 15 16 17 18
statementList (83)
    on left: 24 25, on right: 23 24 38 58
statement (84)
    on left: 26 27 28 29 30 31 32 33 34 35 36 37 38,
    on right: 24 55 56 65 66 67 76
assignmentOperator (85)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50, on right: 90
directIncrementExpression (86)
    on left: 51 52 53 54, on right: 29 73 124
ifStatement (87)
    on left: 55 56, on right: 31
switchStatement (88)
    on left: 57, on right: 32
caseList (89)
    on left: 58 59, on right: 57 58
caseClause (90)
    on left: 60 61, on right: 58
literal (91)
    on left: 62 63 64, on right: 60 137
whileStatement (92)
    on left: 65, on right: 33
doWhileStatement (93)
    on left: 66, on right: 34
forStatement (94)
    on left: 67, on right: 35
forStatementList (95)
    on left: 68 69, on right: 67
forNonEmptyStatementList (96)
    on left: 70 71, on right: 68 70
forComponentStatement (97)
    on left: 72 73 74 75, on right: 70 71
forInStatement (98)
    on left: 76, on right: 36
controlFlowStatement (99)
    on left: 77 78 79 80 81 82, on right: 37
methodCall (100)
    on left: 83 84, on right: 30 74 136
expressionList (101)
    on left: 85 86, on right: 83 85 126
bracketExpressionList (102)
    on left: 87 88, on right: 87 131
expression (103)
    on left: 89, on right: 12 22 55 56 57 65 66 67 75 76 82 85 86 87
    88 122 133 134
directAssignmentExpression (104)
    on left: 90, on right: 28 72 91
assignmentExpression (105)
    on left: 91 92, on right: 89 90
booleanOrExpression (106)
    on left: 93 94, on right: 92 93
booleanAndExpression (107)
    on left: 95 96, on right: 93 94 95
equalityExpression (108)
    on left: 97 98 99, on right: 96 97 98
bitwiseOrExpression (109)
    on left: 100 101, on right: 95 97 98 99 100
xorExpression (110)
    on left: 102 103, on right: 100 101 102
bitwiseAndExpression (111)
    on left: 104 105, on right: 102 103 104
comparisonExpression (112)
    on left: 106 107 108 109 110, on right: 104 105 106 107 108 109
bitShiftExpression (113)
    on left: 111 112 113 114, on right: 106 107 108 109 110 111 112
    113
additionExpression (114)
    on left: 115 116 117, on right: 111 112 113 114 115 116
multiplicationExpression (115)
    on left: 118 119 120 121, on right: 115 116 117 118 119 120
castExpression (116)
    on left: 122 123, on right: 118 119 120 121
castUnfriendlyUnaryExpression (117)
    on left: 124 125 126 127 128, on right: 123 125 129 130
castFriendlyUnaryExpression (118)
    on left: 129 130 131 132, on right: 122 128
parenthesesExpression (119)
    on left: 133 134 135 136 137 138, on right: 51 52 53 54 90 132
    134 135


state 0

    0 $accept: . file $end

    CLASS  shift, and go to state 1

    file             go to state 2
    classDefinition  go to state 3


state 1

    2 classDefinition: CLASS . IDENTIFIER '{' classBodyItemList '}'

    IDENTIFIER  shift, and go to state 4


state 2

    0 $accept: file . $end

    $end  shift, and go to state 5


state 3

    1 file: classDefinition .

    $default  reduce using rule 1 (file)


state 4

    2 classDefinition: CLASS IDENTIFIER . '{' classBodyItemList '}'

    '{'  shift, and go to state 6


state 5

    0 $accept: file $end .

    $default  accept


state 6

    2 classDefinition: CLASS IDENTIFIER '{' . classBodyItemList '}'

    $default  reduce using rule 4 (classBodyItemList)

    classBodyItemList  go to state 7


state 7

    2 classDefinition: CLASS IDENTIFIER '{' classBodyItemList . '}'
    3 classBodyItemList: classBodyItemList . classBodyItem

    VOID        shift, and go to state 8
    IDENTIFIER  shift, and go to state 9
    '}'         shift, and go to state 10

    classBodyItem     go to state 11
    fieldDeclaration  go to state 12
    varDeclaration    go to state 13
    type              go to state 14
    methodDefinition  go to state 15


state 8

   16 methodDefinition: VOID . IDENTIFIER '(' argList ')' methodBody
   18                 | VOID . IDENTIFIER '(' ')' methodBody

    IDENTIFIER  shift, and go to state 16


state 9

   13 type: IDENTIFIER .

    $default  reduce using rule 13 (type)


state 10

    2 classDefinition: CLASS IDENTIFIER '{' classBodyItemList '}' .

    $default  reduce using rule 2 (classDefinition)


state 11

    3 classBodyItemList: classBodyItemList classBodyItem .

    $default  reduce using rule 3 (classBodyItemList)


state 12

    5 classBodyItem: fieldDeclaration .

    $default  reduce using rule 5 (classBodyItem)


state 13

    7 fieldDeclaration: varDeclaration .

    $default  reduce using rule 7 (fieldDeclaration)


state 14

    8 varDeclaration: type . varDeclarationList ';'
   14 type: type . OPEN_AND_CLOSE_BRACKET
   15 methodDefinition: type . IDENTIFIER '(' argList ')' methodBody
   17                 | type . IDENTIFIER '(' ')' methodBody

    OPEN_AND_CLOSE_BRACKET  shift, and go to state 17
    IDENTIFIER              shift, and go to state 18

    varDeclarationList  go to state 19
    varDeclarationItem  go to state 20


state 15

    6 classBodyItem: methodDefinition .

    $default  reduce using rule 6 (classBodyItem)


state 16

   16 methodDefinition: VOID IDENTIFIER . '(' argList ')' methodBody
   18                 | VOID IDENTIFIER . '(' ')' methodBody

    '('  shift, and go to state 21


state 17

   14 type: type OPEN_AND_CLOSE_BRACKET .

    $default  reduce using rule 14 (type)


state 18

   11 varDeclarationItem: IDENTIFIER .
   12                   | IDENTIFIER . '=' expression
   15 methodDefinition: type IDENTIFIER . '(' argList ')' methodBody
   17                 | type IDENTIFIER . '(' ')' methodBody

    '='  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 11 (varDeclarationItem)


state 19

    8 varDeclaration: type varDeclarationList . ';'
    9 varDeclarationList: varDeclarationList . ',' varDeclarationItem

    ';'  shift, and go to state 24
    ','  shift, and go to state 25


state 20

   10 varDeclarationList: varDeclarationItem .

    $default  reduce using rule 10 (varDeclarationList)


state 21

   16 methodDefinition: VOID IDENTIFIER '(' . argList ')' methodBody
   18                 | VOID IDENTIFIER '(' . ')' methodBody

    IDENTIFIER  shift, and go to state 9
    ')'         shift, and go to state 26

    type     go to state 27
    argList  go to state 28
    argItem  go to state 29


state 22

   12 varDeclarationItem: IDENTIFIER '=' . expression

    FALSE                   shift, and go to state 30
    NEW                     shift, and go to state 31
    TRUE                    shift, and go to state 32
    DECREMENT               shift, and go to state 33
    INCREMENT               shift, and go to state 34
    OPEN_AND_CLOSE_BRACKET  shift, and go to state 35
    IDENTIFIER              shift, and go to state 36
    INT_LITERAL             shift, and go to state 37
    '('                     shift, and go to state 38
    '['                     shift, and go to state 39
    '-'                     shift, and go to state 40
    '~'                     shift, and go to state 41
    '!'                     shift, and go to state 42

    directIncrementExpression      go to state 43
    literal                        go to state 44
    methodCall                     go to state 45
    expression                     go to state 46
    directAssignmentExpression     go to state 47
    assignmentExpression           go to state 48
    booleanOrExpression            go to state 49
    booleanAndExpression           go to state 50
    equalityExpression             go to state 51
    bitwiseOrExpression            go to state 52
    xorExpression                  go to state 53
    bitwiseAndExpression           go to state 54
    comparisonExpression           go to state 55
    bitShiftExpression             go to state 56
    additionExpression             go to state 57
    multiplicationExpression       go to state 58
    castExpression                 go to state 59
    castUnfriendlyUnaryExpression  go to state 60
    castFriendlyUnaryExpression    go to state 61
    parenthesesExpression          go to state 62


state 23

   15 methodDefinition: type IDENTIFIER '(' . argList ')' methodBody
   17                 | type IDENTIFIER '(' . ')' methodBody

    IDENTIFIER  shift, and go to state 9
    ')'         shift, and go to state 63

    type     go to state 27
    argList  go to state 64
    argItem  go to state 29


state 24

    8 varDeclaration: type varDeclarationList ';' .

    $default  reduce using rule 8 (varDeclaration)


state 25

    9 varDeclarationList: varDeclarationList ',' . varDeclarationItem

    IDENTIFIER  shift, and go to state 65

    varDeclarationItem  go to state 66


state 26

   18 methodDefinition: VOID IDENTIFIER '(' ')' . methodBody

    '{'  shift, and go to state 67

    methodBody  go to state 68


state 27

   14 type: type . OPEN_AND_CLOSE_BRACKET
   21 argItem: type . IDENTIFIER
   22        | type . IDENTIFIER '=' expression

    OPEN_AND_CLOSE_BRACKET  shift, and go to state 17
    IDENTIFIER              shift, and go to state 69


state 28
